--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@types/react-vertical-timeline-component": "^3.3.6",
         "dotenv": "^16.4.5",
         "framer-motion": "^11.5.4",
         "lucide-react": "^0.439.0",
         "next": "14.2.9",
-        "node-ts": "^6.1.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
@@ -30,6 +28,7 @@
         "eslint-config-next": "14.2.3",
         "postcss": "^8",
         "tailwindcss": "^3.4.10",
-        "typescript": "^5.6.2"
+        "typescript": "^5.6.2",
+        "@types/react-vertical-timeline-component": "^3.3.6"
     }
 }
