--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
         "@types/node": "^22.5.4",
         "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.0",
+        "@types/react-vertical-timeline-component": "^3.3.6",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.3",
         "postcss": "^8",
         "tailwindcss": "^3.4.10",
-        "typescript": "^5.6.2",
-        "@types/react-vertical-timeline-component": "^3.3.6"
+        "typescript": "^5.6.2"
     }
 }
