--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
         "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.0",
         "@types/react-vertical-timeline-component": "^3.3.6",
+        "autoprefixer": "^10.4.20",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.3",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.10",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.11",
         "typescript": "^5.6.2"
     }
 }
